会員登録機能に確認画面を挟むにあたり、API側の調整
